traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:29: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:32: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:35: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:38: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:41: error: Unmatched closing brace '}' ignored here
}
^